fix sortable shifting, closes #18

--- a/styles/snowball-admin.css
+++ b/styles/snowball-admin.css
@@ -26,10 +26,11 @@
 .snowball-block {
   margin: 1em 0;
   background-color: #fff;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2), 0 -3px 6px rgba(0, 0, 0, 0.2);
 }
 
 .snowball-block:last-child {
-  margin-bottom: 0.25em;
+  margin-bottom: 0;
 }
 
 .snowball-gui {
